--- a/pom.xml
+++ b/pom.xml
@@ -144,12 +144,12 @@
                 <repository>
                         <id>artifactory</id>
                         <name>release</name>
-                        <url>http://artifactorycompose:8081/artifactory/libs-release-local</url>
+                        <url>http://192.168.44.44:8081/artifactory/libs-release-local</url>
                 </repository>
                 <snapshotRepository>
                         <id>artifactory</id>
                         <name>snapshots</name>
-                        <url>http://artifactorycompose:8081/artifactory/libs-snapshot-local</url>
+                        <url>http://192.168.44.44:8081/artifactory/libs-snapshot-local</url>
                 </snapshotRepository>
         </distributionManagement>
         
